src/test/ui/resolve/use_suggestion_placement.stderr
error[E0412]: cannot find type `Path` in this scope
  --> $DIR/use_suggestion_placement.rs:17:16
   |
LL |     type Bar = Path;
   |                ^^^^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
LL |     use std::path::Path;
   |

error[E0425]: cannot find value `A` in this scope
  --> $DIR/use_suggestion_placement.rs:22:13
   |
LL |     let _ = A;
   |             ^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
LL | use m::A;
   |

error[E0412]: cannot find type `HashMap` in this scope
  --> $DIR/use_suggestion_placement.rs:27:23
   |
LL |     type Dict<K, V> = HashMap<K, V>;
   |                       ^^^^^^^ not found in this scope
   |
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use std::collections::HashMap;
   |
LL | use std::collections::hash_map::HashMap;
   |

error[E0091]: type parameter `K` is unused
  --> $DIR/use_suggestion_placement.rs:27:15
   |
LL |     type Dict<K, V> = HashMap<K, V>;
   |               ^ unused type parameter

error[E0091]: type parameter `V` is unused
  --> $DIR/use_suggestion_placement.rs:27:18
   |
LL |     type Dict<K, V> = HashMap<K, V>;
   |                  ^ unused type parameter

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0091, E0412, E0425.
For more information about an error, try `rustc --explain E0091`.
